objects/Tanium_Marketplace_Discount__c/Tanium_Marketplace_Discount__c.object-meta.xml
<CustomObject>
    <label>Tanium Marketplace Discount</label>
    <nameField>
        <displayFormat>TMPD-{0000}</displayFormat>
        <label>Tanium Marketplace Discount</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tanium Marketplace Discounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>