objects/Tanium_Marketplace_Discount__c/fields/Deal_Size_Maximum__c.field-meta.xml
<CustomField>
    <fullName>Deal_Size_Maximum__c</fullName>
    <label>Deal Size Maximum</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>