objects/Tanium_Marketplace_Discount__c/fields/Deal_Size_Minimum__c.field-meta.xml
<CustomField>
    <fullName>Deal_Size_Minimum__c</fullName>
    <label>Deal Size Minimum</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>