objects/Tanium_Marketplace_Discount__c/fields/Discount_Amount__c.field-meta.xml
<CustomField>
    <fullName>Discount_Amount__c</fullName>
    <label>Discount Amount (%)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>