objects/Tanium_Marketplace_Discount__c/fields/Disti_Discount__c.field-meta.xml
<CustomField>
    <fullName>Disti_Discount__c</fullName>
    <defaultValue>(0)</defaultValue>
    <description>Will be assigned on Marketplace quotes before being pushed down to the Quote Line by CPQ Price Rule. Jira ticket SS-9205</description>
    <inlineHelpText>Assign the percent to be assigned to the Quote Lines as the Disti Discount</inlineHelpText>
    <label>Disti Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>