objects/Tanium_Marketplace_Discount__c/fields/Marketplace_Partner__c.field-meta.xml
<CustomField>
    <fullName>Marketplace_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Marketplace Partner</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Partner</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Tanium Marketplace Discounts</relationshipLabel>
    <relationshipName>Tanium_Marketplace_Discounts</relationshipName>
    <type>Lookup</type>
</CustomField>