objects/Tanium_Marketplace_Discount__c/fields/Offer_Type__c.field-meta.xml
<CustomField>
    <fullName>Offer_Type__c</fullName>
    <label>Offer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Marketplace_Offer_Type</valueSetName>
    </valueSet>
</CustomField>