objects/Tanium_Marketplace_Discount__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Marketplace_Partner__c</columns>
    <columns>Discount_Amount__c</columns>
    <columns>Disti_Discount__c</columns>
    <columns>Opportunity_Type__c</columns>
    <columns>Offer_Type__c</columns>
    <columns>Deal_Size_Minimum__c</columns>
    <columns>Deal_Size_Maximum__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>