objects/Tanium_Marketplace_Discount__c/listViews/Amazon_New_Customer_Private_Offer.listView-meta.xml
<ListView>
    <fullName>Amazon_New_Customer_Private_Offer</fullName>
    <columns>NAME</columns>
    <columns>Marketplace_Partner__c</columns>
    <columns>Opportunity_Type__c</columns>
    <columns>Offer_Type__c</columns>
    <columns>Deal_Size_Minimum__c</columns>
    <columns>Deal_Size_Maximum__c</columns>
    <columns>Discount_Amount__c</columns>
    <columns>Disti_Discount__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Marketplace_Partner__c</field>
        <operation>contains</operation>
        <value>Amazon</value>
    </filters>
    <filters>
        <field>Offer_Type__c</field>
        <operation>equals</operation>
        <value>Private Offer</value>
    </filters>
    <filters>
        <field>Opportunity_Type__c</field>
        <operation>equals</operation>
        <value>New Customer</value>
    </filters>
    <label>Amazon - New Customer Private Offer</label>
</ListView>