objects/Tanium_Marketplace_Discount__c/listViews/Microsoft.listView-meta.xml
<ListView>
    <fullName>Microsoft</fullName>
    <columns>NAME</columns>
    <columns>Marketplace_Partner__c</columns>
    <columns>Opportunity_Type__c</columns>
    <columns>Offer_Type__c</columns>
    <columns>Deal_Size_Minimum__c</columns>
    <columns>Deal_Size_Maximum__c</columns>
    <columns>Discount_Amount__c</columns>
    <columns>Disti_Discount__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Marketplace_Partner__c</field>
        <operation>contains</operation>
        <value>Microsoft</value>
    </filters>
    <label>Microsoft</label>
</ListView>